fix(testing): :construction: HTTPリクエストヘッダーわから～～～～ん，
user_idが0になるのわからん
